[Feature]: 确定了CanBus的大体框架 [Format]: 修改了CMakeLists.txt

--- a/demos_and_doc/single_arm/package.xml
+++ b/demos_and_doc/single_arm/package.xml
@@ -12,8 +12,10 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
-  <!-- copied -->
-  <!-- <depend>hardware_interface</depend>
+  <depend>hardware_interface</depend>
+  <depend>sp2_hw</depend>
+
+  <!-- 
   <depend>pluginlib</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
@@ -28,7 +30,6 @@
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rviz2</exec_depend>
   <exec_depend>xacro</exec_depend> -->
-  <!-- copied -->
 
   <export>
     <build_type>ament_cmake</build_type>
