--- a/sp2_hw/src/hardware_interface/ActuatorCoefficient.yaml
+++ b/sp2_hw/src/hardware_interface/ActuatorCoefficient.yaml
@@ -6,6 +6,13 @@ actuator_coefficient:
   # effort2act: 52437.561519 # tau to current
   # max_out: 16384
 
+  rm_3508: # without reducer, only the rotor
+    act2pos: { type: double, default_value: 0.0007669903 } # 2PI/8192
+    act2vel: { type: double, default_value: 0.1047197551 } # 2PI/60
+    act2eff: { type: double, default_value: 1.90702994e-5 } # 20/16384*0.3/19.20320855615
+    eff2act: { type: double, default_value: 52437.561519 } # tau to current
+    max_out: { type: double, default_value: 16384 }
+
   rm_2006:
     act2pos: { type: double, default_value: 2.13078897e-5 } # 2PI/8192*(1/36)
     act2vel: { type: double, default_value: 0.0029088820 } # 2PI/60*(1/36)
