[Feature]: 已测试write函数 另外对CanBus.cpp的代码格式进行了一些修正。

--- a/sp2_hw/CMakeLists.txt
+++ b/sp2_hw/CMakeLists.txt
@@ -15,9 +15,10 @@ endif()
 set(THIS_PACKAGE_INCLUDE_DEPENDS
   ament_cmake
   rclcpp
-  hardware_interface
-  pluginlib
   rclcpp_lifecycle
+  hardware_interface
+  transmission_interface
+  pluginlib
   yaml-cpp
 )
 
