--- a/sp2_controllers/chassis_controllers/package.xml
+++ b/sp2_controllers/chassis_controllers/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>sp2_controllers</name>
+  <name>chassis_controllers</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="1513503320@qq.com">lithesh</maintainer>
