[Feature]: roller_wheel可运行 bug: Ignition没导出关节力

--- a/sp2_controllers/chassis_controllers/config/roller_wheel_controller_parameter.yaml
+++ b/sp2_controllers/chassis_controllers/config/roller_wheel_controller_parameter.yaml
@@ -1,4 +1,8 @@
 roller_wheel:
+  left_front_wheel_name: { type: string, default_value: "" }
+  right_front_wheel_name: { type: string, default_value: "" }
+  left_back_wheel_name: { type: string, default_value: "" }
+  right_back_wheel_name: { type: string, default_value: "" }
   joints:
     {
       type: string_array,
